# InvisibleFriend

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  NOTICE.md  README.md  main.py  pyproject.toml
.claude/skills/implementer/: SKILL.md
.claude/skills/implementer/references/: doc-sync.md  execution-rules.md
.claude/skills/planner/: SKILL.md
.claude/skills/planner/references/: domain-analysis-protocol.md  test-quality-rules.md  writing-rules.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/pr-review/evals/: evals.json
.claude/skills/pr-review/references/: checklist-deep.md
.claude/skills/references/: common-commands.md  common-workflows.md  project-architecture.md  project-tree.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: .env.example  settings.example.yaml
scripts/: demo.py
src/invisible_friend/: __init__.py  __main__.py  config.py  exceptions.py  models.py  validators.py
src/invisible_friend/services/: __init__.py  email_service.py  secret_santa.py
src/invisible_friend/templates/: __init__.py  email_template.py
src/invisible_friend/utils/: __init__.py  file_handler.py  logger.py
tests/: __init__.py  conftest.py  test_config.py  test_email_service.py  test_email_template.py  test_file_handler.py  test_logger.py  test_main.py  test_models.py  test_secret_santa.py  test_validators.py  test_version.py
