[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invisible-friend"
version = "1.0.0"
description = "Aplicación para generar y enviar asignaciones de Amigo Invisible"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jordi Sancho"}
]
keywords = ["amigo-invisible", "secret-santa", "email"]

dependencies = [
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "ruff>=0.6.0",
    "mypy>=1.4.1",
    "types-PyYAML>=6.0",
]

[project.scripts]
invisible-friend = "invisible_friend.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
# El template HTML es un documento embebido: sus líneas largas son inherentes al marcado.
"src/invisible_friend/templates/email_template.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
# La cobertura se pide a mano: pytest --cov=invisible_friend --cov-report=term-missing
