[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invisible-friend"
version = "1.1.0"
description = "Application to generate and send Secret Santa (Amigo Invisible) assignments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jordi Sancho"}
]
keywords = ["amigo-invisible", "secret-santa", "email"]

dependencies = [
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    # Pinned to a minor series: the formatter's behaviour changes between minors
    # (0.16 started formatting Python blocks inside Markdown), so an unpinned
    # floor makes CI diverge from local checkouts.
    "ruff>=0.16,<0.17",
    "mypy>=1.4.1",
    "types-PyYAML>=6.0",
]

[project.scripts]
invisible-friend = "invisible_friend.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (caught the non-cryptographic RNG in the draw)
    "G",    # flake8-logging-format (no f-strings in logging calls)
    "RET",  # flake8-return
    "C4",   # flake8-comprehensions
]

[tool.ruff.lint.per-file-ignores]
# S101: assert is how pytest tests express themselves.
# S105/S106: the credentials in the fixtures are fictional, like every other
# piece of test data — the real ones live in the gitignored .env.
"tests/*" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
# Coverage is requested manually: pytest --cov=invisible_friend --cov-report=term-missing
